# telegram-bot-mcp-evolution-managed-rag

./: .gitignore  LICENSE  README.md  docker-compose.yml
bot-managed-rag/: Dockerfile  main.py  pyproject.toml
bot-managed-rag/app/: agent.py  bot.py  config.py  mcp_client.py  system_prompt.txt
mcp-managed-rag/: Dockerfile  pyproject.toml  server.py
