[project]
name = "mcp-managed-rag"
version = "0.1.0"
description = "MCP сервер для запроса информации из базы знаний Evolution Managed RAG"
authors = [
    {name = "MCP Team", email = "ip@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.2.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 
